@@ -25,8 +25,8 @@ EBUILD gitlab-ce-8.15.7.ebuild 11982 SHA256 fab225a8a8a9373898b5c604ce41ed65c464
 EBUILD gitlab-ce-8.16.4.ebuild 11982 SHA256 91875777d0953bffddd31318d9c5d4666ba59bd3446804d063c1199c603bd5a6 SHA512 7112bf185f25d90a11ee2a6e9d197c1ce781b49c486cc1afaff002ad66dcec7c9b43c3b9b6c26c62d23bb7e8c0fdd4c527e53a99f9674bb4af1e404454960227 WHIRLPOOL 76bd66e8b7d4ff04f02354cb6cdf3fa0b92ccf2cdcad26cf117f12330b3f3588713fd0d0465da2515750348975eb81daa6e02f984025804b7db50da99f4e8e5e
 EBUILD gitlab-ce-8.16.5.ebuild 11982 SHA256 fd2648d0a2df06b5aa46435061f6d12b1d0d8b6958c2367b96c2f4a11dbf58f1 SHA512 de82deca3c9163959d6c4c2e41e57549506e49a6a1125d37fa7277e4ca00adb74a331dad4c103f8d1b2e80ebbe1511220c23aabc8889005dcc37684c5b3373c3 WHIRLPOOL 1f80a27148caf3b570df9b5c19849e453001ddc2fc78add1040c53cae249feafcb3a0343ad61d22135ba578f9d92137c048dad0f0744737ae326ac74bf08ce7d
 EBUILD gitlab-ce-8.16.6.ebuild 11982 SHA256 2cc7b8f06153f28ebcc34a5ff8e24be791689c41fc8a780149cdaeb61ffc70d3 SHA512 f9d43d16cac2edbcbc3d144133265b94bbb7dac8ed5266a7ba641cfa6f154eb62462ffff8a37b977559ca892eb20c968eb6f82c2aafbd20ce293f6a6bd7b7e29 WHIRLPOOL 5682849083932171dff509c2142e225992e2724b09987da47bab258fdf45eebaf615cb07739709da2c421eed6fc66f705d6ce35a8d956130598168908ee2f061
-EBUILD gitlab-ce-8.17.0.ebuild 12834 SHA256 47e95fa5b7432622e65404468779a8f56b506076371df473ecd7cb3f31ea8ab4 SHA512 04fb022d2d35deeb79a1e6b95ce8dabab329448cd6645e55cd18149a9c3ffb180e60f5d1763e1ff60f4c3157d4150cf5f21b83d4297ecf2bb1e999d777460fc3 WHIRLPOOL c292ed978e7570d4889152432b6a4ebbcfa912e479b28ff1e1f83f8ed1731f5b12c8d8d7aa836ba3da5308b42081490f46017c87723fb5380729b2e5fa034ca3
+EBUILD gitlab-ce-8.17.0.ebuild 12831 SHA256 9556fe5712044ebe473b7ff8b847a4daa5ca1818a0ac714f22afc5725199da72 SHA512 4aaa00f4eac87a4bbe598cde792997e25b137eea9fdaf7e7c8394ec5e2abc54302ed5432efe1c7055dc195ca2599f9027463480c943f108bb399daa2eee833f5 WHIRLPOOL aec29db1dc7236f60d2723ec97444fa437a4f8b3092cbf53305f3cddbb6851a40b1a77a306daf4c9780ffe9a8eed760c580371bf95da66b18d884a32c3e48cd5
 EBUILD gitlab-ce-8.17.0_rc3.ebuild 12258 SHA256 179da162a7ff3ab1fc9f3173aff30c59a73005622ccb0fe8ada57f950c9d0dd7 SHA512 b5f244a7a7ac980b1e1c1595b88613cf6f3649591a9430dac0db3a174432648b05707b0e3e79450f5882fb7044aca6bb3778a19566ad6c83c5fd30ee8c09893e WHIRLPOOL 49cfbbfedfcafecfa8a775bf0e3a8a9daa2fcce3a819ce92ab07ccaaa4b3881221cce5ebf4ec9333b9ed7a884717d037336dc644d359137e06fe5df3f51e9aaa
-EBUILD gitlab-ce-9999.ebuild 12019 SHA256 bd4fa8a1b3820a36f942139b1c8f74fe9f99b6525e83522e7882b9f010b39870 SHA512 b2a2c1d0df976fbd2892ad8a30d2a7cac3e5d5009be2e28e107d76a32b1de976e502b21b34a584284ae19cc48382250c584d237e8438fa510083457a3f370209 WHIRLPOOL 31dc6fc06c3c8959862ab0d4a91ac2bdd6acef026638e1817beb31a88102ce3acd954fc390d970dd403e3681833dc5a56834f4c7500612ee018bdb79fa3bd818
-MISC ChangeLog 13847 SHA256 cf09d3a56fd55b4d9b1db826370eb3646dd29d8fa55940f1e3b8677704ad6b9d SHA512 d387b428293578d05df8a6b90b44fec21c328506e3e4ee049536e589116ea5a17cbd2a62f524fce54e894a9b52dfa5ce21f8b591bc849118ff70aaa546f85c8b WHIRLPOOL ed60ff73840833181fb92d6f52e90b0fe9d4b0cb5245671d7c0b235f9c41fa7754526148fb4c9f49b0cdbdb3cc693c138912e658969ed4c8063445e751746f8a
+EBUILD gitlab-ce-9999.ebuild 12766 SHA256 d6b55d9812c53897bcf8cf37ee53796e82eea3436521a3b49fa9de5b5d65997b SHA512 3291fe592b3c77b9b475e96fae36a32e17a74b883be7c7a46cb07981556c9a914201426d4a5f2602d35acdf375a9400be0af1d4b99ae3da30423f8b85054e9ab WHIRLPOOL 2329daae3eaa008a7e58e780e677647319e6945f0199c32655f0d86958bbb3cae5f32b09238afd784087a187e69f7b13c8d9e07edc127b8ea62e202946de6371
+MISC ChangeLog 14075 SHA256 bb183ca12c8db890a63592b489eab1f0cf18cedce37a7c710448ade99beb09c6 SHA512 00172c73021f20d32f4204332cb68b52bc707ce385c52a1d6a05bb5e23a3aa7ef75b3471d4b362622c1f3698a355c1f4d1ccde3c73e29433023e3cc50012f31f WHIRLPOOL 1078f3a5a71591f641a855d81d0d9475ac27c08cd3cd1e989d7a91e332eb5de7225bacce6e42f7edca8ec2594c1199a78941b5f25205468e2d27e40184bc51f4
 MISC metadata.xml 559 SHA256 6c3f48d3ef57c97bf27790f33ee04bd8de8b01597caa8a2a7a473d6d0a3c5759 SHA512 5aa340b5429795d84cd106ee673fd55a42fd4b0d3299d6b95c6a3e3d50812a9620820a4de5c57d5048af0c3ecec7f575d5856d2f7fadc210aadcbdd4dd040fe1 WHIRLPOOL f3d7b8c0522e09f5156e6bb446bb74e4c75f5da4495ca2ece1eb78afce59307abe01bf3c5dd5344278fcac9e334300d912031c806f51b981591c01bc3588c6f3
